--- a/aws/serverless-docker/package.json
+++ b/aws/serverless-docker/package.json
@@ -2,16 +2,17 @@
   "name": "serverless-docker",
   "version": "1.0.0",
   "description": "Serverless + Docker + Node",
-  "main": "build/server.js",
+  "main": "build/app.js",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
-    "start": "node build/server.js"
+    "build": "esbuild app.ts --bundle --minify --sourcemap --platform=node --target=es2020 --outfile=build/app.js",
+    "dev": "ts-node-dev --respawn --transpile-only ./src/app.ts"
   },
   "author": "Lucas Bonomo",
   "license": "ISC",
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.108",
     "@types/node": "^18.11.9",
+    "esbuild": "^0.15.13",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   },
