--- a/aws/serverless-docker/tsconfig.json
+++ b/aws/serverless-docker/tsconfig.json
@@ -4,10 +4,9 @@
     "esModuleInterop": true,
     "target": "es2016",
     "moduleResolution": "node",
-    "sourceMap": true,
     "outDir": "build"    
   },
   "include": [
     "./src/**/*"
-  ],
+, "app.ts"  ],
 }
