--- a/aws/01_sqs/package.json
+++ b/aws/01_sqs/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engineStrict": true,
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "dev-boss": "ts-node-dev --respawn --transpile-only ./src/boss.ts",
@@ -10,10 +14,17 @@
   },
   "author": "",
   "license": "ISC",
+  "ts-node": {
+    "files": true
+  },
   "devDependencies": {
+    "@types/node": "^18.11.9",
+    "@types/shortid": "^0.0.29",
     "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
-    "aws-sdk": "^2.1253.0"
+    "aws-sdk": "^2.1253.0",
+    "dotenv": "^16.0.3",
+    "nanoid": "^3.3.4"
   }
 }
