--- a/aws/04_sql_ecr_ecs/package.json
+++ b/aws/04_sql_ecr_ecs/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^18.11.9",
     "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
-    "aws-sdk": "^2.1253.0"
+    "aws-sdk": "^2.1253.0",
+    "dotenv": "^16.0.3"
   }
 }
