--- a/nginx/https/conf.d/default.conf
+++ b/nginx/https/conf.d/default.conf
@@ -29,6 +29,7 @@ server {
 	# SSL Certificates
 	ssl_certificate /etc/nginx/conf.d/localhost.crt;
 	ssl_certificate_key /etc/nginx/conf.d/localhost.key;
+	ssl_protocols TLSv1.2 TLSv1.3;
 
 	root /var/www/html;
 
