--- a/wordpress/02_Dynamic-blocks/package.json
+++ b/wordpress/02_Dynamic-blocks/package.json
@@ -13,7 +13,7 @@
 		"packages-update": "wp-scripts packages-update",
 		"plugin-zip": "wp-scripts plugin-zip",
 		"start": "wp-scripts start --experimental-modules",
-		"server": "wp-env start"
+		"server": "wp-env"
 	},
 	"files": [
 		"[^.]*"
