--- a/wordpress/02_Dynamic-blocks/package.json
+++ b/wordpress/02_Dynamic-blocks/package.json
@@ -19,6 +19,7 @@
 		"[^.]*"
 	],
 	"dependencies": {
+		"@wordpress/components": "^28.13.0",
 		"@wordpress/interactivity": "^6.12.0"
 	},
 	"devDependencies": {
