--- a/wordpress/02_Dynamic-blocks/composer.json
+++ b/wordpress/02_Dynamic-blocks/composer.json
@@ -21,7 +21,9 @@
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
         "wptrt/wpthemereview": "^0.2.1",
         "php-parallel-lint/php-parallel-lint": "^1.2.0",
-        "wp-cli/i18n-command": "^2.2.5"
+        "wp-cli/i18n-command": "^2.2.5",
+        "php-stubs/wordpress-stubs": "^6.7",
+        "phpmd/phpmd": "^2.15"
     },
     "scripts": {
         "lint:wpcs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs",
