--- a/rust/woocommerce_client/Cargo.toml
+++ b/rust/woocommerce_client/Cargo.toml
@@ -6,8 +6,11 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
 reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 dotenv = "0.15"
 config = "0.14"
 dirs = "5"
+xlsxwriter = "0.6"
+chrono = "0.4"
+url = "2"
